--- a/ui/NewKey.ui
+++ b/ui/NewKey.ui
@@ -199,50 +199,11 @@
     </spacer>
    </item>
    <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QPushButton" name="PushButton2">
-       <property name="text">
-        <string>&amp;Cancel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Expanding</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="PushButton1">
-       <property name="text">
-        <string>C&amp;reate</string>
-       </property>
-       <property name="autoDefault">
-        <bool>false</bool>
-       </property>
-       <property name="default">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -251,40 +212,38 @@
   <tabstop>keyType</tabstop>
   <tabstop>keyLength</tabstop>
   <tabstop>curveBox</tabstop>
-  <tabstop>PushButton1</tabstop>
-  <tabstop>PushButton2</tabstop>
  </tabstops>
  <resources/>
  <connections>
   <connection>
-   <sender>PushButton1</sender>
-   <signal>clicked()</signal>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
    <receiver>NewKey</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>395</x>
-     <y>228</y>
+     <x>303</x>
+     <y>274</y>
     </hint>
     <hint type="destinationlabel">
-     <x>244</x>
-     <y>211</y>
+     <x>173</x>
+     <y>248</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>PushButton2</sender>
-   <signal>clicked()</signal>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
    <receiver>NewKey</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>29</x>
-     <y>227</y>
+     <x>408</x>
+     <y>270</y>
     </hint>
     <hint type="destinationlabel">
-     <x>107</x>
-     <y>200</y>
+     <x>56</x>
+     <y>236</y>
     </hint>
    </hints>
   </connection>
