--- a/ui/CertDetail.ui
+++ b/ui/CertDetail.ui
@@ -13,13 +13,7 @@
   <property name="windowTitle">
    <string/>
   </property>
-  <layout class="QVBoxLayout">
-   <property name="spacing">
-    <number>6</number>
-   </property>
-   <property name="margin">
-    <number>9</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QHBoxLayout">
      <property name="spacing">
@@ -376,50 +370,11 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widget" native="true"/>
-   </item>
-   <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Ok</set>
      </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="but_ok">
-       <property name="text">
-        <string>&amp;OK</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -444,18 +399,18 @@
  <resources/>
  <connections>
   <connection>
-   <sender>but_ok</sender>
-   <signal>clicked()</signal>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
    <receiver>CertDetail</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>294</x>
-     <y>437</y>
+     <x>369</x>
+     <y>422</y>
     </hint>
     <hint type="destinationlabel">
-     <x>319</x>
-     <y>503</y>
+     <x>235</x>
+     <y>405</y>
     </hint>
    </hints>
   </connection>
