--- a/ui/ExportKey.ui
+++ b/ui/ExportKey.ui
@@ -10,13 +10,7 @@
     <height>404</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout">
-   <property name="spacing">
-    <number>6</number>
-   </property>
-   <property name="margin">
-    <number>9</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout">
      <property name="spacing">
@@ -225,44 +219,11 @@ PKCS#8 is an encrypted official Key-exchange format</string>
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QPushButton" name="PushButton9">
-       <property name="text">
-        <string>&amp;Cancel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Expanding</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="okButton">
-       <property name="text">
-        <string>&amp;OK</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -273,24 +234,38 @@ PKCS#8 is an encrypted official Key-exchange format</string>
   <tabstop>exportPrivate</tabstop>
   <tabstop>exportPkcs8</tabstop>
   <tabstop>encryptKey</tabstop>
-  <tabstop>okButton</tabstop>
-  <tabstop>PushButton9</tabstop>
  </tabstops>
  <resources/>
  <connections>
   <connection>
-   <sender>PushButton9</sender>
-   <signal>clicked()</signal>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
+   <receiver>ExportKey</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>282</x>
+     <y>377</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>149</x>
+     <y>356</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
    <receiver>ExportKey</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>62</x>
-     <y>392</y>
+     <x>367</x>
+     <y>373</y>
     </hint>
     <hint type="destinationlabel">
-     <x>155</x>
-     <y>359</y>
+     <x>8</x>
+     <y>364</y>
     </hint>
    </hints>
   </connection>
