--- a/ui/KeyDetail.ui
+++ b/ui/KeyDetail.ui
@@ -261,50 +261,11 @@
     </spacer>
    </item>
    <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Ok</set>
      </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="but_ok">
-       <property name="text">
-        <string>&amp;OK</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Expanding</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>151</width>
-         <height>29</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -323,18 +284,18 @@
  <resources/>
  <connections>
   <connection>
-   <sender>but_ok</sender>
-   <signal>clicked()</signal>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
    <receiver>KeyDetail</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>201</x>
-     <y>385</y>
+     <x>485</x>
+     <y>405</y>
     </hint>
     <hint type="destinationlabel">
-     <x>57</x>
-     <y>388</y>
+     <x>258</x>
+     <y>379</y>
     </hint>
    </hints>
   </connection>
