--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -562,6 +562,12 @@ If this list is disabled, you only can create a self-signed certificate.</string
               <attribute name="horizontalHeaderStretchLastSection">
                <bool>true</bool>
               </attribute>
+              <attribute name="horizontalHeaderStretchLastSection">
+               <bool>true</bool>
+              </attribute>
+              <attribute name="horizontalHeaderDefaultSectionSize">
+               <number>200</number>
+              </attribute>
              </widget>
             </item>
             <item>
@@ -1483,47 +1489,11 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="_5">
-     <item>
-      <widget class="QPushButton" name="cancelButton">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>Cancel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>311</width>
-         <height>31</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="okButton">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>OK</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -1606,43 +1576,9 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
   <tabstop>nsCaPolicyUrl</tabstop>
   <tabstop>nsSslServerName</tabstop>
   <tabstop>nsComment</tabstop>
-  <tabstop>okButton</tabstop>
-  <tabstop>cancelButton</tabstop>
  </tabstops>
  <resources/>
  <connections>
-  <connection>
-   <sender>cancelButton</sender>
-   <signal>clicked()</signal>
-   <receiver>NewX509</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>89</x>
-     <y>599</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>179</x>
-     <y>282</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>okButton</sender>
-   <signal>clicked()</signal>
-   <receiver>NewX509</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>701</x>
-     <y>599</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>304</x>
-     <y>543</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>noWellDefinedExpDate</sender>
    <signal>clicked(bool)</signal>
@@ -1650,12 +1586,12 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>566</x>
+     <x>595</x>
      <y>341</y>
     </hint>
     <hint type="destinationlabel">
-     <x>226</x>
-     <y>343</y>
+     <x>203</x>
+     <y>342</y>
     </hint>
    </hints>
   </connection>
@@ -1683,11 +1619,11 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
    <hints>
     <hint type="sourcelabel">
      <x>678</x>
-     <y>331</y>
+     <y>309</y>
     </hint>
     <hint type="destinationlabel">
      <x>131</x>
-     <y>298</y>
+     <y>280</y>
     </hint>
    </hints>
   </connection>
@@ -1699,11 +1635,11 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
    <hints>
     <hint type="sourcelabel">
      <x>678</x>
-     <y>297</y>
+     <y>277</y>
     </hint>
     <hint type="destinationlabel">
      <x>131</x>
-     <y>298</y>
+     <y>280</y>
     </hint>
    </hints>
   </connection>
@@ -1718,8 +1654,8 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
      <y>301</y>
     </hint>
     <hint type="destinationlabel">
-     <x>664</x>
-     <y>321</y>
+     <x>679</x>
+     <y>313</y>
     </hint>
    </hints>
   </connection>
@@ -1730,8 +1666,8 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>256</x>
-     <y>354</y>
+     <x>279</x>
+     <y>344</y>
     </hint>
     <hint type="destinationlabel">
      <x>388</x>
@@ -1746,12 +1682,12 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
    <slot>hideTimeCheck(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>343</x>
-     <y>339</y>
+     <x>384</x>
+     <y>341</y>
     </hint>
     <hint type="destinationlabel">
-     <x>248</x>
-     <y>296</y>
+     <x>203</x>
+     <y>311</y>
     </hint>
    </hints>
   </connection>
@@ -1762,12 +1698,44 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
    <slot>hideTimeCheck(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>324</x>
-     <y>335</y>
+     <x>384</x>
+     <y>341</y>
     </hint>
     <hint type="destinationlabel">
-     <x>216</x>
-     <y>332</y>
+     <x>203</x>
+     <y>342</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
+   <receiver>NewX509</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>557</x>
+     <y>584</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>285</x>
+     <y>570</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
+   <receiver>NewX509</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>643</x>
+     <y>587</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>405</x>
+     <y>566</y>
     </hint>
    </hints>
   </connection>
