--- a/ui/Revoke.ui
+++ b/ui/Revoke.ui
@@ -53,7 +53,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
@@ -84,22 +84,6 @@
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
-     <y>164</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>rejected()</signal>
-   <receiver>Revoke</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>295</x>
-     <y>143</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>286</x>
      <y>164</y>
     </hint>
    </hints>
