--- a/ui/TrustState.ui
+++ b/ui/TrustState.ui
@@ -13,13 +13,7 @@
   <property name="windowTitle">
    <string/>
   </property>
-  <layout class="QVBoxLayout">
-   <property name="spacing">
-    <number>6</number>
-   </property>
-   <property name="margin">
-    <number>8</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout">
      <property name="spacing">
@@ -152,44 +146,11 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QPushButton" name="PushButton5">
-       <property name="text">
-        <string>&amp;Cancel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Expanding</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="PushButton4">
-       <property name="text">
-        <string>&amp;OK</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -204,40 +165,38 @@
   <tabstop>trust0</tabstop>
   <tabstop>trust1</tabstop>
   <tabstop>trust2</tabstop>
-  <tabstop>PushButton4</tabstop>
-  <tabstop>PushButton5</tabstop>
  </tabstops>
  <resources/>
  <connections>
   <connection>
-   <sender>PushButton5</sender>
-   <signal>clicked()</signal>
-   <receiver>TrustState</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>66</x>
-     <y>258</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>171</x>
-     <y>251</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>PushButton4</sender>
-   <signal>clicked()</signal>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
    <receiver>TrustState</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>383</x>
-     <y>247</y>
+     <x>286</x>
+     <y>264</y>
     </hint>
     <hint type="destinationlabel">
-     <x>238</x>
-     <y>247</y>
+     <x>83</x>
+     <y>245</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
+   <receiver>TrustState</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>386</x>
+     <y>260</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>430</x>
+     <y>85</y>
     </hint>
    </hints>
   </connection>
