--- a/ui/ExportKey.ui
+++ b/ui/ExportKey.ui
@@ -1,171 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>ExportKey</class>
- <widget class="QDialog" name="ExportKey">
+ <widget class="QFrame" name="ExportKey">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>419</width>
-    <height>404</height>
+    <width>400</width>
+    <height>116</height>
    </rect>
   </property>
+  <property name="windowTitle">
+   <string>Frame</string>
+  </property>
+  <property name="frameShape">
+   <enum>QFrame::Box</enum>
+  </property>
+  <property name="frameShadow">
+   <enum>QFrame::Sunken</enum>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="TextLabel12">
-       <property name="font">
-        <font>
-         <family>Arial</family>
-         <pointsize>14</pointsize>
-         <weight>50</weight>
-         <italic>false</italic>
-         <bold>false</bold>
-         <underline>false</underline>
-         <strikeout>false</strikeout>
-        </font>
-       </property>
-       <property name="text">
-        <string>Key export</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Expanding</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QLabel" name="image">
-       <property name="minimumSize">
-        <size>
-         <width>95</width>
-         <height>40</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>95</width>
-         <height>40</height>
-        </size>
-       </property>
-       <property name="scaledContents">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <widget class="QLabel" name="TextLabel13">
-     <property name="text">
-      <string>Please enter the filename for the key.</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QFrame" name="frame_3">
-     <property name="frameShape">
-      <enum>QFrame::Box</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Sunken</enum>
-     </property>
-     <layout class="QHBoxLayout">
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <property name="margin">
-       <number>8</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="TextLabel14">
-        <property name="text">
-         <string>Filename</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="filename"/>
-      </item>
-      <item>
-       <widget class="QToolButton" name="fileBut">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLabel" name="TextLabel3">
-     <property name="text">
-      <string>DER is a binary format of the key without encryption
-PEM is a base64 encoded key with optional encryption
-PKCS#8 is an encrypted official Key-exchange format</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QFrame" name="frame_2">
-     <property name="frameShape">
-      <enum>QFrame::Box</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Sunken</enum>
-     </property>
-     <layout class="QHBoxLayout">
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <property name="margin">
-       <number>8</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="TextLabel1">
-        <property name="text">
-         <string>Export Format</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QComboBox" name="exportFormat">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
    <item>
     <widget class="QLabel" name="TextLabel2">
      <property name="text">
@@ -174,100 +28,34 @@ PKCS#8 is an encrypted official Key-exchange format</string>
     </widget>
    </item>
    <item>
-    <widget class="QFrame" name="privFrame">
-     <property name="frameShape">
-      <enum>QFrame::Box</enum>
+    <widget class="QCheckBox" name="exportPrivate">
+     <property name="toolTip">
+      <string>When exporting the private part, it should be encrypted.</string>
      </property>
-     <property name="frameShadow">
-      <enum>QFrame::Sunken</enum>
+     <property name="text">
+      <string>E&amp;xport the private part of the Key too</string>
      </property>
-     <layout class="QVBoxLayout">
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <property name="margin">
-       <number>9</number>
-      </property>
-      <item>
-       <widget class="QCheckBox" name="exportPrivate">
-        <property name="toolTip">
-         <string>When exporting the private part, it should be encrypted.</string>
-        </property>
-        <property name="text">
-         <string>E&amp;xport the private part of the Key too</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="exportPkcs8">
-        <property name="text">
-         <string>Export as PKCS#8</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="encryptKey">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="text">
-         <string>&amp;Encrypt the Key with a password</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
     </widget>
    </item>
    <item>
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+    <widget class="QCheckBox" name="exportPkcs8">
+     <property name="text">
+      <string>Export as PKCS#8</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="encryptKey">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string>&amp;Encrypt the Key with a password</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
- <tabstops>
-  <tabstop>filename</tabstop>
-  <tabstop>fileBut</tabstop>
-  <tabstop>exportFormat</tabstop>
-  <tabstop>exportPrivate</tabstop>
-  <tabstop>exportPkcs8</tabstop>
-  <tabstop>encryptKey</tabstop>
- </tabstops>
  <resources/>
- <connections>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>accepted()</signal>
-   <receiver>ExportKey</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>282</x>
-     <y>377</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>149</x>
-     <y>356</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>rejected()</signal>
-   <receiver>ExportKey</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>367</x>
-     <y>373</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>8</x>
-     <y>364</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
